--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -153,28 +153,97 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
-    // Litho
-    implementation 'com.facebook.litho:litho-core:0.14.0'
-    implementation 'com.facebook.litho:litho-widget:0.14.0'
-    compileOnly 'com.facebook.litho:litho-annotations:0.14.0'
 
-    annotationProcessor 'com.facebook.litho:litho-processor:0.14.0'
+    // Litho
+    implementation 'com.facebook.litho:litho-core:0.13.0'
+    implementation 'com.facebook.litho:litho-widget:0.13.0'
+    compileOnly 'com.facebook.litho:litho-annotations:0.13.0'
+
+    annotationProcessor 'com.facebook.litho:litho-processor:0.13.0'
 
     // SoLoader
     implementation 'com.facebook.soloader:soloader:0.2.0'
 
     // For integration with Fresco
-    implementation 'com.facebook.litho:litho-fresco:0.14.0'
+    implementation 'com.facebook.litho:litho-fresco:0.13.0'
 
     // For testing
-    testImplementation 'com.facebook.litho:litho-testing:0.14.0'
+    testImplementation 'com.facebook.litho:litho-testing:0.13.0'
 
     // Sections
-    implementation 'com.facebook.litho:litho-sections-core:0.14.0'
-    implementation 'com.facebook.litho:litho-sections-widget:0.14.0'
-    compileOnly 'com.facebook.litho:litho-sections-annotations:0.14.0'
+    implementation 'com.facebook.litho:litho-sections-core:0.13.0'
+    implementation 'com.facebook.litho:litho-sections-widget:0.13.0'
+    compileOnly 'com.facebook.litho:litho-sections-annotations:0.13.0'
 
-    annotationProcessor 'com.facebook.litho:litho-sections-processor:0.14.0'
+    annotationProcessor 'com.facebook.litho:litho-sections-processor:0.13.0'
+
+//    // Litho
+//    implementation 'com.facebook.litho:litho-core:0.14.0'
+//    implementation 'com.facebook.litho:litho-widget:0.14.0'
+//    compileOnly 'com.facebook.litho:litho-annotations:0.14.0'
+//
+//    annotationProcessor 'com.facebook.litho:litho-processor:0.14.0'
+//
+//    // SoLoader
+//    implementation 'com.facebook.soloader:soloader:0.2.0'
+//
+//    // For integration with Fresco
+//    implementation 'com.facebook.litho:litho-fresco:0.14.0'
+//
+//    // For testing
+//    testImplementation 'com.facebook.litho:litho-testing:0.14.0'
+//
+//    // Sections
+//    implementation 'com.facebook.litho:litho-sections-core:0.14.0'
+//    implementation 'com.facebook.litho:litho-sections-widget:0.14.0'
+//    compileOnly 'com.facebook.litho:litho-sections-annotations:0.14.0'
+//
+//    annotationProcessor 'com.facebook.litho:litho-sections-processor:0.14.0'
+//
+//    // Litho
+//    implementation 'com.facebook.litho:litho-core:0.15.0'
+//    implementation 'com.facebook.litho:litho-widget:0.15.0'
+//    compileOnly 'com.facebook.litho:litho-annotations:0.15.0'
+//
+//    annotationProcessor 'com.facebook.litho:litho-processor:0.15.0'
+//
+//    // SoLoader
+//    implementation 'com.facebook.soloader:soloader:0.2.0'
+//
+//    // For integration with Fresco
+//    implementation 'com.facebook.litho:litho-fresco:0.15.0'
+//
+//    // For testing
+//    testImplementation 'com.facebook.litho:litho-testing:0.15.0'
+//
+//    // Sections
+//    implementation 'com.facebook.litho:litho-sections-core:0.15.0'
+//    implementation 'com.facebook.litho:litho-sections-widget:0.15.0'
+//    compileOnly 'com.facebook.litho:litho-sections-annotations:0.15.0'
+//
+//    annotationProcessor 'com.facebook.litho:litho-sections-processor:0.15.0'
+
+//    // Litho
+//    implementation 'com.facebook.litho:litho-core:0.15.1-SNAPSHOT'
+//    implementation 'com.facebook.litho:litho-widget:0.15.1-SNAPSHOT'
+//    compileOnly 'com.facebook.litho:litho-annotations:0.15.1-SNAPSHOT'
+//
+//    annotationProcessor 'com.facebook.litho:litho-processor:0.15.1-SNAPSHOT'
+//
+//    // SoLoader
+//    implementation 'com.facebook.soloader:soloader:0.2.0'
+//
+//    // For integration with Fresco
+//    implementation 'com.facebook.litho:litho-fresco:0.15.1-SNAPSHOT'
+//
+//    // For testing
+//    testImplementation 'com.facebook.litho:litho-testing:0.15.1-SNAPSHOT'
+//    // Sections
+//    implementation 'com.facebook.litho:litho-sections-core:0.15.1-SNAPSHOT'
+//    implementation 'com.facebook.litho:litho-sections-widget:0.15.1-SNAPSHOT'
+//    compileOnly 'com.facebook.litho:litho-sections-annotations:0.15.1-SNAPSHOT'
+//
+//    annotationProcessor 'com.facebook.litho:litho-sections-processor:0.15.1-SNAPSHOT'
 }
 
 // Run this once to be able to run the application with BUCK
