--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,5 +23,6 @@ allprojects {
             url "$rootDir/../node_modules/react-native/android"
         }
         maven { url 'https://maven.google.com' }
+//        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     }
 }
